# RFSN-GATE-KERNEL

./: .gitignore  README.md  pyproject.toml
cgw_standalone/: __init__.py
cgw_standalone/agent/: __init__.py  action_memory.py  coding_agent_runtime.py  executor.py  llm_integration.py  proposal_generators.py
cgw_standalone/agent/sim/: simulation_gate.py
cgw_standalone/core/: __init__.py  cgw_state.py  event_bus.py  monitors.py  runtime.py  thalamic_gate.py  types.py
examples/: basic_usage.py
