[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cgw-standalone"
version = "1.0.0"
description = "Conscious Global Workspace - Serial Decision Architecture for Autonomous Coding"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "RFSN Team" }
]
keywords = ["cgw", "autonomous", "coding", "agent", "bandit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
docker = ["docker>=6.0"]
llm = ["openai>=1.0", "httpx>=0.25"]
all = ["docker>=6.0", "openai>=1.0", "httpx>=0.25"]

[project.scripts]
cgw = "cgw_standalone.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cgw_standalone"]
